# newcsman

./: .csman_config  .csman_config.json  CMakeLists.txt  a.out  command.cpp  dir.hpp  fileio.hpp  global.hpp  http.hpp  idx  idx.hpp  localpac.hpp  localpac.json  localpath.txt  pac_repo.hpp  sources_idx
doc/: Dev_doc(ch).md
imports/curl/: CHANGES  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure.ac
imports/curl/docs/: BUG-BOUNTY.md  BUGS  CODE_REVIEW.md  CONTRIBUTE.md  FAQ  GOVERNANCE.md  HELP-US.md  HISTORY.md  HTTP2.md  INSTALL.md  INTERNALS.md  KNOWN_BUGS  MAIL-ETIQUETTE  MQTT.md  Makefile  Makefile.am  Makefile.in  RELEASE-PROCEDURE.md  TODO  TheArtOfHttpScripting  curl.1  options-in-versions
imports/curl/docs/cmdline-opts/: anyauth.d  cert.d  config.d  digest.d  (+28 more)
imports/curl/include/: Makefile  Makefile.in
imports/curl/lib/: Makefile.vxworks  checksrc.pl  mk-ca-bundle.pl  mk-ca-bundle.vbs
imports/curl/m4/: curl-compilers.m4  curl-functions.m4  curl-reentrant.m4  libtool.m4  ltoptions.m4
imports/curl/projects/: README
imports/curl/scripts/: completion.pl
imports/curl/src/: Makefile  Makefile.in
imports/curl/tests/: FILEFORMAT.md  Makefile  Makefile.in  README  ftp.pm  ftpserver.pl  getpart.pm  objnames.inc  pathhelp.pm  runtests.1  runtests.pl  symbol-scan.pl  testcurl.1  testcurl.pl
imports/curl/winbuild/: BUILD.WINDOWS.txt
imports/mozart/: CMakeLists.txt
imports/mozart/src/: process_unix.cpp  process_win32.cpp
imports/zip/include/: miniz.h
lab/: a.out  dir.cpp  fopen.c  message.cpp  sourcesreader.cpp  vector.cpp
(+155 files in other folders)
